RESOLVED FIXED131985
[EFL][WK1] There are many warnings in layout test since r167428
https://bugs.webkit.org/show_bug.cgi?id=131985
Summary [EFL][WK1] There are many warnings in layout test since r167428
Ryuan Choi
Reported 2014-04-22 06:58:17 PDT
Since r167428, flush method was removed but it generates many warnings like below 04:26:40.983 5524 worker/6 crypto/crypto-random-values-types.html output stderr lines: 04:26:40.983 5524 ERR<5654>: /mnt/buildbot/buildslave/WebKit-BuildSlave/efl-linux-64-release-wk1/build/Source/WebKit/efl/ewk/ewk_view.cpp:2800 ewk_view_frame_main_cleared() safety check failed: smartData->api->flush == NULL 04:26:40.983 5524 ERR<5654>: /mnt/buildbot/buildslave/WebKit-BuildSlave/efl-linux-64-release-wk1/build/Source/WebKit/efl/ewk/ewk_view.cpp:2800 ewk_view_frame_main_cleared() safety check failed: smartData->api->flush == NULL 04:26:40.983 5524 worker/6 crypto/crypto-random-values-types.html passed
Attachments
Patch (5.22 KB, patch)
2014-04-22 07:10 PDT, Ryuan Choi
no flags
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion (524.08 KB, application/zip)
2014-04-22 08:33 PDT, Build Bot
no flags
Ryuan Choi
Comment 1 2014-04-22 07:10:48 PDT
Build Bot
Comment 2 2014-04-22 08:33:25 PDT
Comment on attachment 229877 [details] Patch Attachment 229877 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6574079091933184 New failing tests: ietestcenter/css3/flexbox/flexbox-align-baseline-001.htm media/media-controls-clone.html
Build Bot
Comment 3 2014-04-22 08:33:31 PDT
Created attachment 229882 [details] Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Ryuan Choi
Comment 4 2014-04-22 08:39:58 PDT
Comment on attachment 229877 [details] Patch Clearing flags on attachment: 229877 Committed r167661: <http://trac.webkit.org/changeset/167661>
Ryuan Choi
Comment 5 2014-04-22 08:40:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.