Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp
@@ -993,9 +993,6 @@ void FrameLoaderClientEfl::transitionToCommittedForNewPage()
     ASSERT(m_view);
 
     ewk_frame_view_create_for_view(m_frame, m_view);
-
-    if (isLoadingMainFrame())
-        ewk_view_frame_main_cleared(m_view);
 }
 
 void FrameLoaderClientEfl::didSaveToPageCache()
